--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,6 @@
     </head>
 
     <body ng-app="flickr" ng-controller="ItemsCtrl">
-        <!--<ion-header-bar class="bar-energized">-->
-            <!--<h1 class="title">Pull to Refresh!</h1>-->
-        <!--</ion-header-bar>-->
         <ion-header-bar class="bar-dark">
             <h1 class="title">{{ data.title }}</h1>
             <!-- New Task button-->
@@ -34,33 +31,30 @@
             </button>
         </ion-header-bar>
 
-
-
-
         <ion-content>
             <ion-refresher pulling-text="Pull to refresh" on-refresh="doRefresh()">
             </ion-refresher>
             <ion-list>
-                <ion-item ng-repeat="item in items">
-                    <div class="list card">
+                <!--<ion-item ng-repeat="item in items">-->
+                    <div class="list card" ng-repeat="item in items">
 
-                        <!--<div class="item item-avatar">-->
-                            <!--<img ng-src="{{item.media.m}}">-->
-                            <!--&lt;!&ndash;<h2>Marty McFly</h2>&ndash;&gt;-->
-                            <!--&lt;!&ndash;<p>November 05, 1955</p>&ndash;&gt;-->
-                        <!--</div>-->
+                        <div class="item item-avatar">
+                            <img ng-src="https://answers.atlassian.com/images/icons/profilepics/default.png">
+                            <h2>{{ item.author }}</h2>
+                            <p>{{ item.date_taken }}</p>
+                        </div>
 
                         <div class="item item-body">
                             <a ng-href="{{ item.link }}"><img class="full-image" ng-src="{{item.media.m}}"></a>
-                            {{ item.description }}
+                            <!--<div ng-bind-html="item.description || sanitize"></div>-->
                             <p>
-                                <a href="#" class="subdued">1 Like</a>
-                                <a href="#" class="subdued">5 Comments</a>
+                                <!--<a href="#" class="subdued">1 Like</a>-->
+                                <!--<a href="#" class="subdued">5 Comments</a>-->
                             </p>
                         </div>
 
                     </div>
-                </ion-item>
+                <!--</ion-item>-->
             </ion-list>
         </ion-content>
 
