--- a/www/index.html
+++ b/www/index.html
@@ -57,7 +57,7 @@
 
                 <!-- Modal header bar -->
                 <ion-header-bar class="bar-secondary">
-                    <h1 class="title">New Task</h1>
+                    <h1 class="title">New Tag</h1>
                     <button class="button button-clear button-positive" ng-click="closeNewTag()">Cancel</button>
                 </ion-header-bar>
 
@@ -67,7 +67,7 @@
                     <form ng-submit="createTag(tag)">
                         <div class="list">
                             <label class="item item-input">
-                                <input type="text" placeholder="What do you need to do?" ng-model="tag">
+                                <input type="text" placeholder="What tag to search?" ng-model="tag">
                             </label>
                         </div>
                         <div class="padding">
