--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,7 @@
                         </div>
                         <div class="padding">
                             <button type="submit" class="button button-block button-positive">Create Tag</button>
+                            <!--<button class="button button-clear button-negative" ng-click="createTag('')">Remove tags</button>-->
                         </div>
                     </form>
 
